# covid-sim

./: .gitignore  .travis.yml  cleanBuildTests.sh
src/: .gitignore  CMakeLists.txt  Country.h  CovidSim.cpp  CovidSim.h  Enum.h  InfStat.h  Model.h  Param.h  SetupModel.cpp  Sweep.cpp  Update.cpp  main.cpp
src/tests/: AdunitConfigBuilder.cpp  AdunitConfigBuilder.h  CMakeLists.txt  ConfigFile.cpp  ConfigFile.h  CovidSimCmdLineArgs.cpp  CovidSimCmdLineArgs.h  CovidSimExternInterface.h  CovidSimTestFixture.cpp  CovidSimTestFixture.h  ParamsConfigBuilder.cpp  ParamsConfigBuilder.h  PreParamConfigBuilder.cpp  PreParamConfigBuilder.h  paramReadTests.cpp  testCommandLineParsing.cpp  testError.cpp  testParamParsing.cpp
